src/objects/LP_Address__c.object
<CustomObject>
    <fields>
        <fullName>LP_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LP_Full_Address__c</fullName>
        <formula>LP_Street_Address__c &amp; BR() &amp; LP_City__c &amp; &quot;,&quot; &amp; &quot; &quot; &amp; LP_State_Province__c &amp; &quot; &quot; &amp;  LP_Zip_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LP_State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LP_Street_Address__c</fullName>
        <inlineHelpText>• Abbreviate the words in the address that indicate direction – North 5th would be N 5th
• 100 Southeast 200 Northwest would be 100 SE 200 NW
• Abbreviate street types (St, Ave, Blvd) – Do not include period
• No periods after abbreviation of name</inlineHelpText>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LP_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Street Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>